--- a/docs/modules/usage_guide/pages/catalogs/index.adoc
+++ b/docs/modules/usage_guide/pages/catalogs/index.adoc
@@ -70,8 +70,8 @@ metadata:
   name: simple-trino
 spec:
   image:
-    productVersion: 396
-    stackableVersion: 0.3.0
+    productVersion: "396"
+    stackableVersion: "23.4.0-rc1"
   catalogLabelSelector:
     matchLabels:
       trino: simple-trino
