--- a/docs/modules/usage_guide/pages/log-aggregation.adoc
+++ b/docs/modules/usage_guide/pages/log-aggregation.adoc
@@ -12,7 +12,14 @@ spec:
     config:
       logging:
         enableVectorAgent: true
+        containers:
+          trino:
+            loggers:
+              io.trino:
+                level: INFO
 ----
+
+Currently, the logs are collected only for `server.log`. Logging for `http-request.log` is disabled by default.
 
 Further information on how to configure logging, can be found in
 xref:home:concepts:logging.adoc[].
