attempt to fix docs

--- a/docs/modules/usage_guide/nav.adoc
+++ b/docs/modules/usage_guide/nav.adoc
@@ -1,14 +1,18 @@
-* xref:index.adoc[]
-** xref:cluster.adoc[]
-** xref:configuration.adoc[]
-** xref:security.adoc[]
-** xref:monitoring.adoc[]
-** xref:log-aggregation.adoc[]
-** xref:query.adoc[]
-** xref:catalogs/index.adoc[]
-*** xref:catalogs/black-hole.adoc[]
-*** xref:catalogs/google-sheets.adoc[]
-*** xref:catalogs/hive.adoc[]
-*** xref:catalogs/iceberg.adoc[]
-*** xref:catalogs/tpcds.adoc[]
-*** xref:catalogs/tpch.adoc[]
+* xref:trino:getting_started/index.adoc[]
+** xref:trino:getting_started/installation.adoc[]
+** xref:trino:getting_started/first_steps.adoc[]
+* xref:trino:configuration.adoc[]
+* xref:trino:concepts.adoc[]
+* xref:trino:usage_guide/index.adoc[]
+** xref:trino:usage_guide/cluster.adoc[]
+** xref:trino:usage_guide/configuration.adoc[]
+** xref:trino:usage_guide/security.adoc[]
+** xref:trino:usage_guide/monitoring.adoc[]
+** xref:trino:usage_guide/query.adoc[]
+** xref:trino:usage_guide/catalogs/index.adoc[]
+*** xref:trino:usage_guide/catalogs/black-hole.adoc[]
+*** xref:trino:usage_guide/catalogs/google-sheets.adoc[]
+*** xref:trino:usage_guide/catalogs/hive.adoc[]
+*** xref:trino:usage_guide/catalogs/iceberg.adoc[]
+*** xref:trino:usage_guide/catalogs/tpcds.adoc[]
+*** xref:trino:usage_guide/catalogs/tpch.adoc[]
