--- a/docs/modules/trino/partials/nav.adoc
+++ b/docs/modules/trino/partials/nav.adoc
@@ -9,6 +9,7 @@
 ** xref:trino:usage_guide/security.adoc[]
 ** xref:trino:usage_guide/monitoring.adoc[]
 ** xref:trino:usage_guide/query.adoc[]
+** xref:trino:usage_guide/pod_placement.adoc[]
 ** xref:trino:usage_guide/catalogs/index.adoc[]
 *** xref:trino:usage_guide/catalogs/black-hole.adoc[]
 *** xref:trino:usage_guide/catalogs/google-sheets.adoc[]
