--- a/docs/modules/trino/pages/usage_guide/connect_to_trino.adoc
+++ b/docs/modules/trino/pages/usage_guide/connect_to_trino.adoc
@@ -7,7 +7,7 @@ Multiple SQL clients can be used to connect to Trino as described below.
 
 == Perquisites
 The Trino server must be reachable from your local computer.
-It is normally secured via HTTPS with a certificated provided by a xref:secret-operator:secretclass.adoc[SecretClass].
+It is typically secured via HTTPS with a certificated provided by a xref:secret-operator:secretclass.adoc[SecretClass].
 
 As most setups use a self-signed certificate, the easiest way is to disable the Trino cert validation as the following guide will do.
 A production-ready solution would be to extract the `ca.crt` from the SecretClass and provide it to the Trino client.
