--- a/docs/modules/trino/partials/nav.adoc
+++ b/docs/modules/trino/partials/nav.adoc
@@ -5,6 +5,7 @@
 * xref:trino:concepts.adoc[]
 * xref:trino:usage_guide/index.adoc[]
 ** xref:trino:usage_guide/cluster.adoc[]
+** xref:trino:usage_guide/connect_to_trino.adoc[]
 ** xref:trino:usage_guide/configuration.adoc[]
 ** xref:trino:usage_guide/security.adoc[]
 ** xref:trino:usage_guide/monitoring.adoc[]
