--- a/docs/modules/trino/pages/usage_guide/security.adoc
+++ b/docs/modules/trino/pages/usage_guide/security.adoc
@@ -2,7 +2,7 @@
 
 This page covers <<Authentication>> and <<Authorization>>.
 
-== Authentication
+== [[authentication]]Authentication
 
 Trino supports several https://trino.io/docs/current/security/authentication-types.html[authentication types].
 
@@ -53,7 +53,7 @@ include::example$usage_guide/trino-ldap-auth-snippet.yaml[tag=trino]
 
 In the Trino CLI and web interface, LDAP users can now be used to log in.
 
-== Authorization
+== [[authorization]]Authorization
 
 In order to authorize Trino via OPA, a `ConfigMap` containing Rego rules for Trino has to be applied. The following example is an all-access Rego rule for testing with the user `admin`. Do not use it in production!
 
@@ -63,3 +63,75 @@ include::example$usage_guide/opa-bundle-trino-cm.yaml[]
 ----
 
 Users should write their own rego rules for more complex OPA authorization.
+
+== Define a secure cluster
+
+For secure connections the following steps must be taken:
+
+1. Enable authentication
+2. Enable TLS between the clients and coordinator
+3. Enable internal TLS for communication between coordinators and workers
+
+=== Via authentication
+
+If authentication is enabled, https://trino.io/docs/current/security/tls.html[TLS] for the coordinator as well as a shared secret for https://trino.io/docs/current/security/internal-communication.html[internal communications] (this is base64 and not encrypted) must be configured.
+
+Securing the Trino cluster will disable all HTTP ports and disable the web interface on the HTTP port as well. In the definition below the authentication is directed to use the `trino-users` secret and TLS communication will use a certificate signed by the Secret Operator (indicated by `autoTls`).
+
+[source,yaml]
+----
+include::example$usage_guide/trino-secure-tls.yaml[]
+----
+
+<1> The name of (and reference to) the `SecretClass`
+<2> The name of (and reference to) the `Secret`
+<3> `TrinoCatalog` reference
+<4> TLS mechanism
+
+The CLI now requires that a path to the keystore and a password be provided:
+
+[source]
+----
+./trino.jar --debug --server https://172.18.0.3:31748
+--user=admin --keystore-path=<path-to-keystore.p12> --keystore-password=<password>
+----
+
+=== Via TLS only
+
+This will disable the HTTP port and UI access and encrypt client-server communications.
+
+[source,yaml]
+----
+include::example$usage_guide/trino-secure-tls-only.yaml[]
+----
+
+<1> The name of (and reference to) the `SecretClass`
+<2> `TrinoCatalog` reference
+<3> TLS mechanism
+
+CLI callout:
+
+[source]
+----
+./trino.jar --debug --server https://172.18.0.3:31748 --keystore-path=<path-to-keystore.p12> --keystore-password=<password>
+----
+
+=== Via internal TLS
+
+Internal TLS is for encrypted and authenticated communications between coordinators and workers. Since this applies to all the data send and processed between the processes, this may reduce the performance significantly.
+
+[source,yaml]
+----
+include::example$usage_guide/trino-secure-internal-tls.yaml[]
+----
+
+<1> The name of (and reference to) the `SecretClass`
+<2> The name of (and reference to) the `Secret`
+<3> TLS mechanism
+
+Since Trino has internal and external communications running over a single port, this will enable the HTTPS port but not expose it. Cluster access is only possible via HTTP.
+
+[source]
+----
+./trino.jar --debug --server http://172.18.0.3:31748 --user=admin
+----
