--- a/docs/modules/trino/partials/nav.adoc
+++ b/docs/modules/trino/partials/nav.adoc
@@ -4,15 +4,15 @@
 * xref:trino:configuration.adoc[]
 * xref:trino:concepts.adoc[]
 * xref:trino:usage_guide/index.adoc[]
-** xref:trino:usage_guide/cluster.adoc[]
+** xref:trino:usage_guide/pod_placement.adoc[]
+** xref:trino:usage_guide/cluster_operations.adoc[]
 ** xref:trino:usage_guide/connect_to_trino.adoc[]
 ** xref:trino:usage_guide/configuration.adoc[]
+** xref:trino:usage_guide/s3.adoc[]
 ** xref:trino:usage_guide/security.adoc[]
 ** xref:trino:usage_guide/monitoring.adoc[]
 ** xref:trino:usage_guide/log_aggregation.adoc[]
 ** xref:trino:usage_guide/query.adoc[]
-** xref:trino:usage_guide/pod_placement.adoc[]
-** xref:trino:usage_guide/cluster_operations.adoc[]
 ** xref:trino:usage_guide/catalogs/index.adoc[]
 *** xref:trino:usage_guide/catalogs/black-hole.adoc[]
 *** xref:trino:usage_guide/catalogs/google-sheets.adoc[]
