--- a/docs/modules/trino/pages/usage_guide/s3.adoc
+++ b/docs/modules/trino/pages/usage_guide/s3.adoc
@@ -1,7 +1,7 @@
 = S3 connection specification
 
 You can specify S3 connection details directly inside the TrinoCatalog specification
-or by referring to an external`S3Connection custom resource.
+or by referring to an external S3Connection custom resource.
 
 To specify S3 connection details directly as part of the TrinoCatalog resource, you
 add an inline connection configuration as shown below:
