--- a/docs/modules/trino/pages/usage_guide/catalogs/index.adoc
+++ b/docs/modules/trino/pages/usage_guide/catalogs/index.adoc
@@ -72,9 +72,10 @@ spec:
   image:
     productVersion: "396"
     stackableVersion: "23.4.0-rc2"
-  catalogLabelSelector:
-    matchLabels:
-      trino: simple-trino
+  clusterConfig:
+    catalogLabelSelector:
+      matchLabels:
+        trino: simple-trino
 # ...
 ----
 
