--- a/docs/modules/trino/pages/concepts.adoc
+++ b/docs/modules/trino/pages/concepts.adoc
@@ -28,9 +28,6 @@ Within Stackable a `TrinoCatalog` consists of one or more (mandatory or optional
 
 The following diagram illustrates this. Two Trino catalogs - each an instance of a particular connector - are declared with labels that used to match them to a Trino cluster:
 
-[excalidraw,trino-catalog-overview,svg,width=70%]
-----
-include::partial$diagrams/TrinoCatalogs.excalidraw[]
-----
+image::catalogs.drawio.svg[A TrinoCluster referencing two catalogs by label matching]
 
 A complete example of this is shown here: xref:usage_guide/catalogs/index.adoc[].
