Update examples and docs

--- a/docs/modules/trino/pages/usage_guide/catalogs/index.adoc
+++ b/docs/modules/trino/pages/usage_guide/catalogs/index.adoc
@@ -71,7 +71,7 @@ metadata:
 spec:
   image:
     productVersion: "396"
-    stackableVersion: "23.4.0-rc2"
+    stackableVersion: "0.0.0-dev"
   catalogLabelSelector:
     matchLabels:
       trino: simple-trino
