docs: Fixed Catalog example

--- a/docs/modules/trino/pages/usage_guide/catalogs/index.adoc
+++ b/docs/modules/trino/pages/usage_guide/catalogs/index.adoc
@@ -72,9 +72,10 @@ spec:
   image:
     productVersion: "414"
     stackableVersion: "0.0.0-dev"
-  catalogLabelSelector:
-    matchLabels:
-      trino: simple-trino
+  clusterConfig:
+    catalogLabelSelector:
+      matchLabels:
+        trino: simple-trino
 # ...
 ----
 
