--- a/docs/modules/trino/pages/usage_guide/security.adoc
+++ b/docs/modules/trino/pages/usage_guide/security.adoc
@@ -41,9 +41,9 @@ Multiple authentication classes with different user secrets can be provided.
 
 The operator never reads secrets directly, but mounts them directly into the `Pod`. Volume mount names can not exceed *63* characters due to Kubernetes restrictions.
 
-For uniqueness, the volume mount name is internally build up of the name of the `AuthenticationClass` and the name of the referenced `Secret` concatenated with a "-" character (e.g. "simple-trino-file-auth-simple-trino-users" for the example above). This means the `AuthenticationClass` and `Secret` names combined must be smaller than *62* characters.
+For uniqueness, the volume mount name is internally build up of the name of the `AuthenticationClass`. This means the `AuthenticationClass` name must not exceed *63* characters.
 
-IMPORTANT: Due to Kubernetes restrictions, the concatenated names of the AuthenticationClass and its referenced Secret must not exceed *62* characters
+IMPORTANT: Due to Kubernetes restrictions, the name of the AuthenticationClass must not exceed *63* characters.
 
 Changes to the referenced user `Secret` (e.g. adding or removing a user) are updated in Trino without restarts but after a small delay. This heavily depends on Kubernetes and may take a couple of minutes.
 
