--- a/docs/modules/trino/pages/usage_guide/configuration.adoc
+++ b/docs/modules/trino/pages/usage_guide/configuration.adoc
@@ -104,29 +104,45 @@ By default, in case nothing is configured in the custom resource for a certain r
 
 === Resource Requests
 
-// The "nightly" version is needed because the "include" directive searches for
-// files in the "stable" version by default.
-// TODO: remove the "nightly" version after the next platform release (current: 22.09)
-include::nightly@home:concepts:stackable_resource_requests.adoc[]
+include::home:concepts:stackable_resource_requests.adoc[]
 
-If no resource requests are configured explicitly, the Trino operator uses the following defaults:
+A minimal HA setup consisting of 1 coordinator and 2 worker instances has the following https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/[resource requirements]:
+
+* `900m` CPU request
+* `3000m` CPU limit
+* `5312m` memory request and limit
+* `1500Mi` persistent storage
+
+Corresponding to the values above, the operator uses the following resource defaults:
 
 [source,yaml]
 ----
+coordinators:
+  roleGroups:
+    default:
+      config:
+        resources:
+          cpu:
+            min: '200m'
+            max: '800m'
+          memory:
+            limit: '1024Mi'
+          storage:
+            data:
+              capacity: '500Mi'
 workers:
   roleGroups:
     default:
       config:
         resources:
-          requests:
-            cpu: 200m
-            memory: 2Gi
-          limits:
-            cpu: "4"
-            memory: 2Gi
+          cpu:
+            min: '200m'
+            max: '800m'
+          memory:
+            limit: '2048Mi'
           storage:
             data:
-              capacity: 2Gi
+              capacity: '500Mi'
 ----
 
 WARNING: The default values are _most likely_ not sufficient to run a proper cluster in production. Please adapt according to your requirements.
